--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rollup-plugin-terser": "7.0.0"
   },
   "dependencies": {
+    "highlight.js": "10.1.2",
     "jquery": "3.5.1",
     "lodash": "4.17.20",
     "markdown-it": "11.0.0",
