--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "markdown-render",
-  "version": "1.0.0",
+  "name": "markdown-render-js",
+  "version": "1.0.1",
   "description": "markdown-render",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,7 @@
     "@babel/preset-env": "7.11.0",
     "@rollup/plugin-babel": "5.2.0",
     "@rollup/plugin-commonjs": "15.0.0",
+    "@rollup/plugin-inject": "4.0.2",
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "9.0.0",
     "rollup-plugin-terser": "7.0.0"
