--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@rollup/plugin-inject": "4.0.2",
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "9.0.0",
+    "less": "3.12.2",
     "rollup-plugin-terser": "7.0.0"
   },
   "dependencies": {
     "highlight.js": "10.1.2",
+    "highlightjs-solidity": "1.0.18",
     "jquery": "3.5.1",
     "lodash": "4.17.20",
     "markdown-it": "11.0.0",
